kubectl/ingress/ingress.yaml
##
# Jellyfin Ingress Configuration
##
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8096
      targetPort: 8096
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  labels:
    kubernetes.io/service-name: jellyfin
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8096
endpoints:
  - addresses:
      - "192.168.1.127"
    conditions:
      serving: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    # traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
    # jellyfin app for lg webos doesn't like these security headers, need to figure out which ones and create a custom middleware for them
spec:
  tls:
    - hosts:
      - jellyfin.joeberry.org
  rules:
  - host: jellyfin.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: jellyfin.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096              
##
# Proxmox Ingress Configuration
##
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: kube-system-skipverify@kubernetescrd
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8006
      targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox
  labels:
    kubernetes.io/service-name: proxmox
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - "192.168.1.79"
    conditions:
      serving: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-security-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - proxmox.joeberry.org
  rules:
  - host: proxmox.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox
            port:
              number: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: proxmox.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox
            port:
              number: 8006

##
# Truenas Ingress Configuration
##
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: kube-system-skipverify@kubernetescrd    
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 443
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - "192.168.1.213"
    conditions:
      serving: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-security-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - truenas.joeberry.org
  rules:
  - host: truenas.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas
            port:
              number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: truenas.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas
            port:
              number: 443              
##
# OPNSense Ingress Configuration
##
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: kube-system-skipverify@kubernetescrd    
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 10443
      targetPort: 10443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: opnsense
  labels:
    kubernetes.io/service-name: opnsense
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 10443
endpoints:
  - addresses:
      - "192.168.1.1"
    conditions:
      serving: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-security-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - opnsense.joeberry.org
  rules:
  - host: opnsense.joeberry.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: opnsense
            port:
              number: 10443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: opnsense.joeberry.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: opnsense
            port:
              number: 10443              
##
# Hytale Ingress Configuration
##
---
apiVersion: v1
kind: Service
metadata:
  name: hytale
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"   
spec:
  type: LoadBalancer
  ports:
    - name: server
      port: 5520
      protocol: UDP
      targetPort: 5520
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: hytale
  labels:
    kubernetes.io/service-name: hytale
addressType: IPv4
ports:
  - name: server
    protocol: UDP
    port: 5520
endpoints:
  - addresses:
      - "192.168.1.217"
    conditions:
      serving: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hytale-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - hytale.joeberry.org
  rules:
  - host: hytale.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hytale
            port:
              number: 5520
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hytale-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: hytale.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hytale
            port:
              number: 5520              
##
# Frigate Ingress Configuration
##
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 5000
      targetPort: 9000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: frigate
  labels:
    kubernetes.io/service-name: frigate
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 5000
endpoints:
  - addresses:
      - "192.168.1.206"
    conditions:
      serving: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - frigate.joeberry.org
  rules:
  - host: frigate.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: frigate.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
##
# Home Assistant Ingress Configuration
##
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8123
      targetPort: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant
  labels:
    kubernetes.io/service-name: homeassistant
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "192.168.1.172"
    conditions:
      serving: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    # traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
    # to-do - homeassistant and oidc don't like these security headers, need to figure out which ones and create a custom middleware for them
spec:
  tls:
    - hosts:
      - homeassistant.joeberry.org
  rules:
  - host: homeassistant.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: homeassistant.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
